--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.5",
